# parse_uiks

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
src/apps/addreses/: admin.py  apps.py  gateways.py  models.py  services.py  tests.py  utils.py  views.py
src/apps/addreses/migrations/: 0001_initial.py  0002_treeitem.py  0003_trigrams.py
src/apps/addreses/templates/addreses/: input.html
src/apps/uiks/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
src/apps/uiks/management/commands/: dump_uiks.py
src/apps/uiks/migrations/: 0001_initial.py  0002_address_ikperson.py
src/project/: settings.py  urls.py  wsgi.py
src/project/settings/: settings.py  settings_local.py
