[tool.poetry]
name = "parse_uiks"
version = "0.1.0"
description = ""
authors = ["Artem Kanarev <aduchimergen@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
django = "^2.1"
django-extensions = "^2.0"
pendulum = "^2.0"
requests = "^2.21"
beautifulsoup4 = "^4.6"
ipython = "^7.16"
django_q = "^0.9.4"
djangorestframework = "^3.8"
djangorestframework-gis = "^0.13.0"
djangorestframework-jsonp = "^1.0"
django-filter = "^2.0"
psycopg2-binary = "^2.7"
dj-database-url = "^0.5.0"
python-decouple = "^3.1"

[tool.poetry.dev-dependencies]
